adds new module for cleaner code

--- a/week4/js-hammer-time/index.html
+++ b/week4/js-hammer-time/index.html
@@ -38,6 +38,9 @@ void main() {
   outColor = vec4(0.5, 0, 0.5, 1);
 }
     </script>
+  <script src="wglSetup.js"></script>
+  <script src="wglUtil.js"></script>
+  <script src="wglShader.js"></script>
   <script src="glitch.js"></script>
 </body>
 </html>
