adds the new workflow structure

--- a/week4/js-hammer-time/glitch.html
+++ b/week4/js-hammer-time/glitch.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="glitch();">
-    <h1>Hi!</h1>
+    <h1>This is the glitch attack page</h1>
     <canvas width="200" height="200" id="c">Not supported</canvas>
 
     <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
@@ -53,9 +53,10 @@ void main(){
   );
 }
     </script>
-  <script src="wglSetup.js"></script>
-  <script src="wglUtil.js"></script>
-  <script src="wglShader.js"></script>
-  <script src="glitch.js"></script>
+  <script src="static/wglSetup.js"></script>
+  <script src="static/wglUtil.js"></script>
+  <script src="static/wglShader.js"></script>
+  <script src="static/adbApi.js"></script>
+  <script src="static/glitch.js"></script>
 </body>
 </html>
