--- a/week4/js-hammer-time/glitch.html
+++ b/week4/js-hammer-time/glitch.html
@@ -52,7 +52,7 @@ void main(){
 }
     </script>
   <script src="static/jquery-3.3.1.min.js"></script>
-  <script src="static/wglSetup.js"></script>
+  <!-- <script src="static/wglSetup.js"></script> -->
   <!-- <script src="static/adbApi.js"></script> -->
   <script src="static/wglUtil.js"></script>
   <script src="static/wglShader.js"></script>
