Add debug of compiled shader program

--- a/week4/js-hammer-time/glitch.html
+++ b/week4/js-hammer-time/glitch.html
@@ -38,7 +38,7 @@ void main() {
   uint val = 0u;
   ivec2 base = ivec2(0,0);
   ivec2 base32 = ivec2(0,2);
-  for (int i = 0; i < 2000000; i++) {
+  for (uint i = 0u; i < 2000000u; i++) {
       val += texelFetch(HTex00, base, 0).r;
       val += texelFetch(HTex01, base, 0).r;
       val += texelFetch(HTex02, base, 0).r;
